Add Basic Layout and Limited Functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header><h1>3-Day Weather Tracker</h1></header>
+    <form>
+      <label for="city">City</label>
+      <input type="text" name="city" id="city" placeholder="New York" />
+      <button type="submit">Submit</button>
+    </form>
     <div id="content"></div>
+    <footer>
+      <div>Trisston Icenhower</div>
+      <nav>
+        <a
+          href="https://www.linkedin.com/in/trisston-icenhower-46a532238/"
+          target="_blank"
+          ><img
+            class="nav-icon"
+            src="./img/linkedin.svg"
+            alt="LinkedIn Link" /></a
+        ><a href="https://github.com/Tice28" target="_blank"
+          ><img
+            class="nav-icon"
+            src="./img/GitHub_Logo_White.png"
+            alt="Github Link"
+        /></a>
+      </nav>
+    </footer>
   </body>
 </html>
