Correct Functionality and Update Format

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><h1>3-Day Weather Tracker</h1></header>
-    <form>
+    <header><h1>Weather Forecast</h1></header>
+    <form id="lookupForm">
       <label for="city">City</label>
       <input type="text" name="city" id="city" placeholder="New York" />
       <button type="submit">Submit</button>
@@ -32,6 +32,12 @@
             alt="Github Link"
         /></a>
       </nav>
+      <div class="linkback">
+        Powered by
+        <a href="https://www.weatherapi.com/" title="Free Weather API"
+          >WeatherAPI.com</a
+        >
+      </div>
     </footer>
   </body>
 </html>
