--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><h1>Weather Forecast</h1></header>
-    <form id="lookupForm">
-      <label for="city">City</label>
-      <input type="text" name="city" id="city" placeholder="New York" />
-      <button type="submit">Submit</button>
-    </form>
+    <header>
+      <h1>Weather Forecast</h1>
+      <h2 id="cityName">New York</h2>
+    </header>
+    <div class="form-controls">
+      <form id="lookupForm">
+        <label for="city">City</label>
+        <input type="text" name="city" id="city" placeholder="New York" />
+        <button type="submit">Submit</button>
+      </form>
+      <div class="temp-type">
+        <h1>F/C</h1>
+        <label class="switch">
+          <input type="checkbox" id="tempToggle" />
+          <span class="slider round"></span>
+        </label>
+      </div>
+    </div>
+
     <div id="content"></div>
     <footer>
       <div>Trisston Icenhower</div>
